infrastructure/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
