infrastructure/prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: monitoring
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /grafana
    backendRefs:
    - name: prometheus-operator-grafana
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /prometheus
    backendRefs:
    - name: prometheus-operator-kube-p-prometheus
      port: 9090
