infrastructure/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route
  namespace: dashboard
spec:
  parentRefs:
    - name: http-gateway
      namespace: default
  rules:
  - matches:
      - path:
          type: Exact
          value: /wego
    filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplaceFullPath
            replaceFullPath: /wego/
          statusCode: 302
  - matches:
    - path:
        type: PathPrefix
        value: /wego/
    backendRefs:
    - name: wego-weave-gitops
      port: 9001
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: https-route
  namespace: dashboard
spec:
  parentRefs:
    - name: https-gateway
      namespace: default
  rules:
    - backendRefs:
      - name: kubernetes-dashboard
        port: 80
